chore: change UpdateSearchFilterCommand
