# api-description/web-api.swagger.yaml
@@ -1021,64 +1021,6 @@ paths:
             $ref: '#/definitions/accountUpdateAccountV2Request'
       tags:
         - Account
-  /v1/account/update_default_search_filter:
-    post:
-      summary: Update default Search Filter
-      description: Update a default search filter. To call this API, you need an `VIEWER` role.
-      operationId: web.v1.account.update_default_search_filter
-      responses:
-        "200":
-          description: A successful response.
-          schema:
-            $ref: '#/definitions/accountUpdateDefaultSearchFilterResponse'
-        "400":
-          description: Returned for bad requests that may have failed validation.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-          examples:
-            application/json:
-              code: 3
-              details: []
-              message: invalid arguments error
-        "401":
-          description: Request could not be authenticated (authentication required).
-          schema:
-            $ref: '#/definitions/rpcStatus'
-          examples:
-            application/json:
-              code: 16
-              details: []
-              message: not authenticated
-        "403":
-          description: Request does not have permission to access the resource.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-          examples:
-            application/json:
-              code: 7
-              details: []
-              message: not authorized
-        "503":
-          description: Returned for internal errors.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-          examples:
-            application/json:
-              code: 13
-              details: []
-              message: internal
-        default:
-          description: An unexpected error response.
-          schema:
-            $ref: '#/definitions/rpcStatus'
-      parameters:
-        - name: body
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/accountUpdateDefaultSearchFilterRequest'
-      tags:
-        - Account
   /v1/account/update_search_filter:
     post:
       summary: Update Search Filter
@@ -2799,6 +2741,20 @@ definitions:
         type: string
       defaultFilter:
         type: boolean
+  accountChangeSearchFilterNameCommand:
+    type: object
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+  accountChangeSearchFilterQueryCommand:
+    type: object
+    properties:
+      id:
+        type: string
+      query:
+        type: string
   accountConsoleAccount:
     type: object
     properties:
@@ -3194,30 +3150,6 @@ definitions:
         $ref: '#/definitions/accountChangeAccountV2EnvironmentRolesCommand'
   accountUpdateAccountV2Response:
     type: object
-  accountUpdateDefaultSearchFilterRequest:
-    type: object
-    properties:
-      email:
-        type: string
-      organizationId:
-        type: string
-      environmentId:
-        type: string
-      command:
-        $ref: '#/definitions/accountChangeDefaultSearchFilterCommand'
-  accountUpdateDefaultSearchFilterResponse:
-    type: object
-  accountUpdateSearchFilterCommand:
-    type: object
-    properties:
-      id:
-        type: string
-      name:
-        type: string
-      query:
-        type: string
-      defaultFilter:
-        type: boolean
   accountUpdateSearchFilterRequest:
     type: object
     properties:
@@ -3227,8 +3159,12 @@ definitions:
         type: string
       environmentId:
         type: string
-      command:
-        $ref: '#/definitions/accountUpdateSearchFilterCommand'
+      changeNameCommand:
+        $ref: '#/definitions/accountChangeSearchFilterNameCommand'
+      changeQueryCommand:
+        $ref: '#/definitions/accountChangeSearchFilterQueryCommand'
+      changeDefaultFilterCommand:
+        $ref: '#/definitions/accountChangeDefaultSearchFilterCommand'
   accountUpdateSearchFilterResponse:
     type: object
   authAuthType:
