# pkg/account/api/validation.go
@@ -569,6 +569,7 @@ func validateCreateSearchFilterRequest(
 
 func validateUpdateSearchFilterRequest(
 	req *accountproto.UpdateSearchFilterRequest,
+	commands []command.Command,
 	localizer locale.Localizer,
 ) error {
 	if req.Email == "" {
@@ -591,7 +592,8 @@ func validateUpdateSearchFilterRequest(
 		}
 		return dt.Err()
 	}
-	if req.Command == nil {
+
+	if len(commands) == 0 {
 		dt, err := statusNoCommand.WithDetails(&errdetails.LocalizedMessage{
 			Locale:  localizer.GetLocale(),
 			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "command"),
@@ -601,77 +603,50 @@ func validateUpdateSearchFilterRequest(
 		}
 		return dt.Err()
 	}
-	if req.Command.Id == "" {
-		dt, err := statusSearchFilterIDIsEmpty.WithDetails(&errdetails.LocalizedMessage{
-			Locale:  localizer.GetLocale(),
-			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "id"),
-		})
-		if err != nil {
-			return statusInternal.Err()
+	for _, cmd := range commands {
+		switch cmd := cmd.(type) {
+		case accountproto.ChangeSearchFilterNameCommand:
+			if err := validateChangeSearchFilterId(cmd.Id, localizer); err != nil {
+				return err
+			}
+			if cmd.Name == "" {
+				dt, err := statusSearchFilterNameIsEmpty.WithDetails(&errdetails.LocalizedMessage{
+					Locale:  localizer.GetLocale(),
+					Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "name"),
+				})
+				if err != nil {
+					return statusInternal.Err()
+				}
+				return dt.Err()
+			}
+		case accountproto.ChangeSearchFilterQueryCommand:
+			if err := validateChangeSearchFilterId(cmd.Id, localizer); err != nil {
+				return err
+			}
+			if cmd.Query == "" {
+				dt, err := statusSearchFilterQueryIsEmpty.WithDetails(&errdetails.LocalizedMessage{
+					Locale:  localizer.GetLocale(),
+					Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "query"),
+				})
+				if err != nil {
+					return statusInternal.Err()
+				}
+				return dt.Err()
+			}
+		case accountproto.ChangeDefaultSearchFilterCommand:
+			if err := validateChangeSearchFilterId(cmd.Id, localizer); err != nil {
+				return err
+			}
 		}
-		return dt.Err()
-	}
-	if req.Command.Name == "" {
-		dt, err := statusSearchFilterNameIsEmpty.WithDetails(&errdetails.LocalizedMessage{
-			Locale:  localizer.GetLocale(),
-			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "name"),
-		})
-		if err != nil {
-			return statusInternal.Err()
-		}
-		return dt.Err()
-	}
-	if req.Command.Query == "" {
-		dt, err := statusSearchFilterQueryIsEmpty.WithDetails(&errdetails.LocalizedMessage{
-			Locale:  localizer.GetLocale(),
-			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "query"),
-		})
-		if err != nil {
-			return statusInternal.Err()
-		}
-		return dt.Err()
 	}
 	return nil
 }
 
-func validateUpdateDefaultSearchFilterRequest(
-	req *accountproto.UpdateDefaultSearchFilterRequest,
-	localizer locale.Localizer,
-) error {
-	if req.Email == "" {
-		dt, err := statusEmailIsEmpty.WithDetails(&errdetails.LocalizedMessage{
-			Locale:  localizer.GetLocale(),
-			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "email"),
-		})
-		if err != nil {
-			return statusInternal.Err()
-		}
-		return dt.Err()
-	}
-	if req.OrganizationId == "" {
-		dt, err := statusMissingOrganizationID.WithDetails(&errdetails.LocalizedMessage{
-			Locale:  localizer.GetLocale(),
-			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "organization_id"),
-		})
-		if err != nil {
-			return statusInternal.Err()
-		}
-		return dt.Err()
-	}
-	if req.Command == nil {
-		dt, err := statusNoCommand.WithDetails(&errdetails.LocalizedMessage{
-			Locale:  localizer.GetLocale(),
-			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "command"),
-		})
-		if err != nil {
-			return statusInternal.Err()
-		}
-		return dt.Err()
-	}
-	if req.Command.Id == "" {
+func validateChangeSearchFilterId(id string, localizer locale.Localizer) error {
+	if id == "" {
 		dt, err := statusSearchFilterIDIsEmpty.WithDetails(&errdetails.LocalizedMessage{
 			Locale:  localizer.GetLocale(),
-			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "id"),
+			Message: localizer.MustLocalizeWithTemplate(locale.RequiredFieldTemplate, "search_filter_id"),
 		})
 		if err != nil {
 			return statusInternal.Err()
